<resources>
    <string name="app_name">Signal</string>
    <string name="default_web_cli_id">92184874560-2o37ql1qui5419ar2bmdo3kaakdsecn8.apps.googleusercontent.com</string>


    <!-- formatted strings -->
    <string name="amountWithChangePercentage">%1$s (%2$s%%)</string>
    <string name="transactionTypeWithQuantity">%1$s (%2$s)</string>
    <string name="transactionTimeWithExchange">%1$s via %2$s</string>
    <string name="twoTextWithSpace">%1$s %2$s</string>
    <string name="transactionCost">This transactions is worth %1$s %2$s</string>
    <string name="coinPair">%1$s/%2$s</string>
    <string name="buyPriceHint">Buy Price %1$s</string>
    <string name="coinDayChanges">%1$.2f%%</string>
    <string name="marketCap">Mkt cap: %1$s</string>
    <string name="tickerActivityTitle">%1$s Markets</string>
    <string name="newsActivityTitle">%1$s News</string>
    <string name="transactionsDetailsActivityTitle">Transactions - %1$s </string>

    <string name="amountMillion">%1$s Million</string>
    <string name="amountBillion">%1$s Billion</string>

    <string name="period_1h">1H</string>
    <string name="period_1day">1D</string>
    <string name="period_1week">1W</string>
    <string name="period_1month">1M</string>
    <string name="period_3month">3M</string>
    <string name="period_1year">1Y</string>
    <string name="period_all">&#8734;</string>

    <string name="gain">%1$s</string>
    <string name="gainPercentage">%1$.2f%%</string>
    <string name="past_hour">Past Hour</string>
    <string name="past_day">Past Day</string>
    <string name="past_week">Past Week</string>
    <string name="past_month">Past Month</string>
    <string name="past_month_3">Past 3 Months</string>
    <string name="past_year">Past Year</string>
    <string name="all_time">All Time</string>
    <string name="about">About</string>
    <string name="cd_coin_image">Coin Image</string>
    <string name="statistics">Statistics</string>
    <string name="open">Open</string>
    <string name="today_s_high">Today\'s High</string>
    <string name="today_s_low">Today\'s Low</string>
    <string name="change_today">Change today\'s</string>
    <string name="volume">Volume</string>
    <string name="average_volume">Average Volume</string>
    <string name="market_cap">Market Cap</string>
    <string name="supply">Supply</string>
    <string name="coin_info">Coin Info</string>
    <string name="exchange">Exchange</string>
    <string name="algorithm">Algorithm</string>
    <string name="proof_type">Proof Type</string>
    <string name="global_avg">Global average</string>
    <string name="recent_news">Recent News</string>
    <string name="more">More</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="update_transaction">Update</string>
    <string name="erase_transaction">Erase</string>
    <string name="save_transaction">SAVE</string>
    <string name="portfolio_changed_percentage">(%1$s%%)</string>
    <string name="search_hint">Coin name or Symbol</string>
    <string name="trading_pair">Trading Pair</string>
    <string name="buy_price">Buy Price</string>
    <string name="amount">Amount</string>
    <string name="amount_bought">Amount Bought</string>
    <string name="date_time"><![CDATA[Date & time]]></string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="change_exchange">Change Exchange</string>
    <string name="change_trading_pair">Change trading pair</string>
    <string name="transactions">Transactions</string>
    <string name="position">Position</string>
    <string name="market_value">Market Value</string>
    <string name="total_return">Total Return</string>
    <string name="try_again_exchange">Try again to select Exchange</string>

    <string name="search_coin">Search Coin</string>
    <string name="crypto_compare_short">CryptoCompare.com</string>
    <string name="crypto_compare"></string>
    <string name="crypto_compare_url">https://www.cryptocompare.com</string>
    <string name="crypto_panic_short">CryptoPanic.com</string>
    <string name="crypto_panic">Powered by CryptoPanic.com</string>
    <string name="crypto_panic_url">https://www.cryptopanic.com</string>
    <string name="coin_gecko_short">CoinGecko.com</string>
    <string name="coin_gecko">Powered by CoinGecko.com</string>
    <string name="coin_gecko_url">https://www.coingecko.com</string>
    <string name="profit_loss">Profit/Loss</string>
    <string name="your_total_balance">Your total balance</string>
    <string name="_24h_changes">24h Changes</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="remove_to_watchlist">Remove from watchlist</string>

    <string name="coin_added_to_watchlist">Started Watching %1$s</string>
    <string name="coin_removed_to_watchlist">Stopped Watching %1$s</string>
    <string name="coin_already_purchased">Purchased coins can not be removed from watchlist</string>
    <string name="info_unavailable">Currency info unavailable</string>
    <string name="na">N/A</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="cdNewsArticle">News Article</string>
    <string name="add_new_currency">Add new currency</string>
    <string name="wallet">Wallet</string>
    <string name="cdNewsImage">News image</string>
    <string name="website">Website</string>
    <string name="twitter">Twitter</string>
    <string name="twitterValue">\@%1$s</string>
    <string name="twitterUrl">https://twitter.com/%1$s</string>
    <string name="reddit">Reddit</string>
    <string name="github">Github</string>
    <string name="markets">Markets</string>
    <string name="greater_than"><![CDATA[>]]></string>
    <string name="app_version">App Version</string>
    <string name="api_provider">Powered by</string>
    <string name="attributionUrl">https://github.com/pranayairan/CoinBit/blob/master/attribution.md</string>
    <string name="privacyPolicyUrl">https://github.com/pranayairan/CoinBit/blob/master/coinbit_privacy_policy.md</string>
    <string name="email_address">pranay.airan@iiitb.net</string>
    <string name="feedback_coinbit">Feedback for CoinBit</string>
    <string name="select_currency">Select Currency</string>
    <string name="currency">Currency</string>
    <string name="general">General</string>
    <string name="refresh_currency_list">Refresh Currency List</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_exchange_list">Refresh Exchange List</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share App</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="intro_coin_title">5000 Coins</string>
    <string name="intro_coin_message">Track 4000+ coins, across 100+ exchanges.</string>
    <string name="intro_track_title">Track Gains</string>
    <string name="intro_track_message">Add transactions, track profit and loss. All at 1 place.</string>
    <string name="intro_secure_title">Highly Secure</string>
    <string name="intro_secure_message">Completely offline and secure. Your data never leaves the device.</string>
    <string name="loading_coins">Loading Coins and preparing the app..</string>
    <string name="ticker_error">No Ticker Info Available</string>
    <string name="news_error">No Recent News Available</string>
    <string name="error_ticker">Error loading ticker</string>
    <string name="additional_options">Additional Options</string>
    <string name="deduct_from_usd_holdings">Deduct from USD holdings</string>
    <string name="search">Search</string>
    <string name="average_cost">Average Cost</string>
    <string name="cost">Cost</string>
    <string name="portfolio_down">▼</string>
    <string name="portfolio_up">▲</string>
    <string name="market">Market</string>
    <string name="discover">Discover</string>
    <string name="settings">Settings</string>
    <string name="cdLogo">CoinBit logo</string>
    <string name="cdFirstExchange">First Exchange</string>
    <string name="cdSecondExchange">Second Exchange</string>
    <string name="cdThirdExchange">Third Exchange</string>
    <string name="cdExchange">Exchange</string>
    <string name="attribution">Attribution</string>
    <string name="top_volume">Top Volume Coins</string>
    <string name="top_pair">Top Volume Pair</string>
    <string name="home">home</string>
    <string name="search_coins">search coins</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_logo">Google Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_proper_email">Enter proper Email</string>
    <string name="enter_proper_password">Enter proper Password</string>
    <string name="password_not_matching">Password not matching</string>
    <string name="registration_successful">Registration successful</string>
    <string name="login_successful">Login Successful</string>
    <string name="check_your_connection">No internet. Check your connection</string>
    <string name="invalid_password">The password is invalid or the user does not have a password</string>
    <string name="no_user_found">There is no user record corresponding to this identifier. The user may have been deleted</string>
    <string name="account_temporarily_disabled">Access to this account has been temporarily disabled due to many failed login attempts. You can immediately restore it by resetting your password or you can try again later.</string>
    <string name="network_error">A network error (such as timeout, interrupted connection or unreachable host) has occurred</string>
    <string name="generic_error">Error unknown. Try again later</string>
    <string name="reset_password_success">We have sent you instructions to reset your password</string>
    <string name="reset_password_fail">Failed to send reset email. Try again later</string>
    <string name="email_already_used">The email address is already in use by another account</string>

</resources>
