<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background">

    <!-- Content Container -->
    <FrameLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvSearchCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/search_coins"
        android:visibility="gone"
        android:textColor="@color/primaryTextColor"
        android:layout_marginTop="@dimen/generic24dp"
        android:layout_marginEnd="@dimen/generic24dp"
        />

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tvSearchCoins"
        app:layout_constraintEnd_toStartOf="@+id/tvSearchCoins"
        android:text="@string/home"
        android:visibility="gone"
        android:textColor="@color/primaryTextColor"
        android:layout_marginEnd="@dimen/generic20dp"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchCoins"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/generic14dp"
        android:text="@string/market"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/generic20dp"
        />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchCoins"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/generic14dp"
        android:layout_marginEnd="@dimen/generic12dp"
        android:text="@string/logout"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        />



</androidx.constraintlayout.widget.ConstraintLayout>